# jobradar

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  exploration.ipynb  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: api_cd.yml  ci.yml  data_pipeline.yml  deploy_infra.yml  spark_transform.yml
api/: .dockerignore  Dockerfile  main.py  requirements-api.txt
dashboard/: app.py
dbt/: dbt_project.yml
notebooks/: exploration.ipynb
src/ingestion/: __init__.py  fetch_adzuna.py  fetch_france_travail.py  load_to_duckdb.py  orchestrator.py
src/lambda/adzuna/: ingest_adzuna.py
src/lambda/france_travail/: ingest_france_travail.py
src/lambda/jooble/: ingest_jooble.py
src/lambda/jsearch/: ingest_jsearch.py
src/scripts/: generate_profile.py
src/spark/: transform.py
src/utils/: __init__.py  common.py  logging_utils.py
terraform/: .terraform.lock.hcl  app_runner.tf  cloudwatch.tf  eventbridge.tf  glue.tf  iam.tf  lambda.tf  lambda_api.tf  main.tf  outputs.tf  providers.tf  variables.tf
tests/: conftest.py  test_adzuna.py  test_france_travail.py  test_orchestrator.py
tests/api/: test_main.py
tests/integration/: test_lambda_s3.py  test_spark_pipeline.py
tests/lambda/: test_ingest_adzuna.py  test_ingest_france_travail.py  test_ingest_jooble.py  test_ingest_jsearch.py
tests/scripts/: test_generate_profile.py
tests/spark/: test_transform.py
transform/: dbt_project.yml  profiles.yml
transform/models/marts/: api_jobs_ranking.sql  (+3 more)
transform/seeds/: ideal_profile_vector.csv
transform/tests/: assert_data_quality_score_range.sql  assert_matching_score_range.sql  assert_rules_score_range.sql  assert_semantic_score_range.sql  assert_url_not_null.sql
ui/: app.py
(+6 files in other folders)
